# finalproject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  memoryPool.cpp  readme
include/: bitBoard.h  fsmHeuristic.h  mcts.h  memoryPool.h  misc.h  nodeManager.h  othelloNet.h  residual_block.h
src/: bitboard.cpp  main.cpp  mcts.cpp  memoryPool.cpp  misc.cpp  nodeManager.cpp  othelloNet.cpp
test/: testsuite.cpp
